# python-songpal

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
custom_components/media_player/: songpal.py
devinfos/: BDV-N9200W - BDV-2014.json  CMT-SX7B.json  HT-NT5.json  HT-ST5000.json  HT-XT2.json  HT-XT3.json  HT-ZF9.json  LSPX-S2.json  SRS-X77.json  SRS-X99.json  SRS-ZR5.json  SRS-ZR7.json  STR-AN1000.json  STR-AZ5000ES.json  STR-DN1060.json  STR-DN1080.json  STR-ZA810ES.json
songpal/: __init__.py  common.py  containers.py  device.py  discovery.py  group.py  main.py  method.py  notification.py  protocol.py  service.py  version.py
songpal/services/: __init__.py  audio.py  avcontent.py  guide.py  service.py  system.py
songpal/tests/: conftest.py  disco.xml  test_device.py  test_discovery.py  test_method.py  test_service.py
songpal/tests/data/devinfos/: HT-XT3.json  STR-DN1060.json
